--- a/authors.html
+++ b/authors.html
@@ -7,7 +7,7 @@
 
     <a class="navbar-brand me-2" href="index.html">QTLMR</a>
 
-    <small class="nav-text text-muted me-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="">2.14</small>
+    <small class="nav-text text-muted me-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="">2.23</small>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
       <h2>Authors</h2>
 
       <ul class="list-unstyled"><li>
-          <p><strong>H YB</strong>. Author, maintainer. <a href="https://orcid.org/YOUR-ORCID-ID" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
+          <p><strong>YB H</strong>. Author, maintainer.
           </p>
         </li>
       </ul></div>
@@ -45,15 +45,15 @@
       <h2 id="citation">Citation</h2>
       <p></p>
 
-      <p>YB H (2024).
+      <p>H Y (2025).
 <em>QTLMR: 快速进行Post GWAS与xQTL MR相关分析</em>.
-R package version 2.14, <a href="https://hortoner.github.io/QTLMR">https://hortoner.github.io/QTLMR</a>.
+R package version 2.23, <a href="https://hortoner.github.io/QTLMR">https://hortoner.github.io/QTLMR</a>.
 </p>
       <pre>@Manual{,
   title = {QTLMR: 快速进行Post GWAS与xQTL MR相关分析},
-  author = {H YB},
-  year = {2024},
-  note = {R package version 2.14},
+  author = {YB H},
+  year = {2025},
+  note = {R package version 2.23},
   url = {https://hortoner.github.io/QTLMR},
 }</pre>
     </div>
@@ -63,7 +63,7 @@ R package version 2.14, <a href="https://hortoner.github.io/QTLMR">https://horto
 
 
     <footer><div class="pkgdown-footer-left">
-  <p>Developed by H YB.</p>
+  <p>Developed by YB H.</p>
 </div>
 
 <div class="pkgdown-footer-right">
