--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main id="main" class="col-md-9"><div class="section level1">
 <div class="page-header"><h1 id="qtlmr">QTLMR<a class="anchor" aria-label="anchor" href="#qtlmr"></a>
 </h1></div>
-<p><strong>                                   联系作者：Dr.H E-mail: <a href="mailto:2214047750@qq.com" class="email">2214047750@qq.com</a></strong> <br><br>         在现代生物医学研究中，理解基因与疾病之间的因果关系是发现新的治疗靶点的关键；通过Post GWAS与多组学孟德尔随机化分析，能更好探究疾病发病的病理生理机制。QTLMR是一个功能强大的R语言包，整合了MR、共定位、SMR、LDSC、HDL、Hess、LAVA、MiXeR、MTAG、METAL、CPASSOC、PLACO和TWAS分析等多种算法及多种可视化绘图功能。这些方法共同为快速识别疾病发病的诱因、治疗的潜在靶点提供了一体化的解决方案。 <br><br></p>
+<p><strong>                                   联系作者：Dr.H E-mail: <a href="mailto:2214047750@qq.com" class="email">2214047750@qq.com</a></strong> <br><br>         在现代生物医学研究中，理解基因与疾病之间的因果关系是发现新的治疗靶点的关键；通过Post GWAS与多组学孟德尔随机化分析，能更好探究疾病发病的病理生理机制。QTLMR是一个功能强大的R语言包，整合了MR、gsMap、coloc、PWcoco、SMR、FOCUS、MTAG、Hess、METAL、LDSC、HDL、SUPERGNOVA、GNOVA、CPASSOC、PLACO、MiXeR、cond/conjFDR、FM_summary、 GCTA_fastBAT、MAGMA、MR-JTI、SMulTiXcan、S-PrediXcan、PoPs、FOCUS、FUSION及UTMOST分析等多种算法及多种可视化绘图功能。这些方法共同为快速识别疾病发病的诱因、治疗的潜在靶点提供了一体化的解决方案。 <br><br></p>
 <div class="section level3">
 <h3 id="r语言集合软件包安装与更新">R语言集合软件包安装与更新:<a class="anchor" aria-label="anchor" href="#r%E8%AF%AD%E8%A8%80%E9%9B%86%E5%90%88%E8%BD%AF%E4%BB%B6%E5%8C%85%E5%AE%89%E8%A3%85%E4%B8%8E%E6%9B%B4%E6%96%B0"></a>
 </h3>
@@ -114,7 +114,7 @@
 </ul>
 </li>
 </ul>
-<p><br>         QTLMR包为研究人员提供了一套完整且强大的工具，用于揭示基因与疾病之间的因果关系。通过整合MR、共定位、SMR、LDSC、HDL、Hess、LAVA、MiXeR、MTAG、METAL、CPASSOC、PLACO和TWAS分析等多种算法，QTLMR包帮助研究人员快速识别疾病的潜在治疗靶点。如果你致力于理解基因与疾病的关系并寻找新的治疗靶点或探索疾病发病机制，QTLMR包将是您的理想选择，祝君科研顺利！ <br></p>
+<p><br>         QTLMR包为研究人员提供了一套完整且强大的工具，用于揭示基因与疾病之间的因果关系。通过整合MR、gsMap、coloc、PWcoco、SMR、FOCUS、MTAG、Hess、METAL、LDSC、HDL、SUPERGNOVA、GNOVA、CPASSOC、PLACO、MiXeR、cond/conjFDR、FM_summary、 GCTA_fastBAT、MAGMA、MR-JTI、SMulTiXcan、S-PrediXcan、PoPs、FOCUS、FUSION及UTMOST分析等多种算法，QTLMR包帮助研究人员快速识别疾病的潜在治疗靶点。如果你致力于理解基因与疾病的关系并寻找新的治疗靶点或探索疾病发病机制，QTLMR包将是您的理想选择，祝君科研顺利！ <br></p>
 <p><strong>        更多函数及功能将不断更新，敬请期待…</strong></p>
 </div>
 </div>
